Initial commit portal halifa

--- a/form-pendaftaran.html
+++ b/form-pendaftaran.html
@@ -344,10 +344,9 @@
         <div><label>Kelurahan</label><input type="text" name="Kelurahan" /></div>
 
         <div><label>Kecamatan</label><input type="text" name="Kecamatan" /></div>
-        <div><label>Provinsi</label><input type="text" name="Provinsi" /></div> ```
+        <div><label>Provinsi</label><input type="text" name="Provinsi" /></div>
 
         <div><label>Kode Pos</label><input type="text" name="Kode Pos" /></div>
-
         <div><label>HP</label><input type="text" name="HP" /></div>
       </div>
 
